--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,20 +1,4 @@
 mat-card {
-  max-width: 1000px;
-  margin: 2em auto;
-  text-align: center;
-  max-height: 600px;
-}
-
-.header{
-  text-align: center;
-
-}
-.full-width {
-  width: 80%;
-}
-
-.aLink{
-  float: right;
-  padding-right: 60px;
-  text-decoration: none;
+  max-width: 100%;
+  max-height: 100%;
 }
